[package]
edition = "2021"
name = "actors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test-ws"
path = "tests/websocket.rs"

[dependencies]
async-trait = "0.1.68"
flume = "0.10.14"
futures = "0.3.28"
pin-project = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
warp = "0.3.5"
